crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__if_extra_closing_parentheses.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..110,
        body: [
            If(
                StmtIf {
                    node_index: NodeIndex(None),
                    range: 90..97,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: NodeIndex(None),
                            range: 93..97,
                            value: true,
                        },
                    ),
                    body: [],
                    elif_else_clauses: [],
                    runtime_body: None,
                },
            ),
            Pass(
                StmtPass {
                    node_index: NodeIndex(None),
                    range: 105..109,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | # FIXME(micha): This creates two syntax errors instead of just one (and overlapping ones)
2 | if True)):
  |        ^ Syntax Error: Expected `:`, found `)`
3 |     pass
  |


  |
1 | # FIXME(micha): This creates two syntax errors instead of just one (and overlapping ones)
2 | if True)):
  |         ^ Syntax Error: Expected a statement
3 |     pass
  |


  |
1 | # FIXME(micha): This creates two syntax errors instead of just one (and overlapping ones)
2 | if True)):
  |          ^ Syntax Error: Expected a statement
3 |     pass
  |


  |
1 | # FIXME(micha): This creates two syntax errors instead of just one (and overlapping ones)
2 | if True)):
  |           ^ Syntax Error: Expected a statement
3 |     pass
  |


  |
1 | # FIXME(micha): This creates two syntax errors instead of just one (and overlapping ones)
2 | if True)):
3 |     pass
  | ^^^^ Syntax Error: Unexpected indentation
  |


  |
2 | if True)):
3 |     pass
  |         ^ Syntax Error: Expected a statement
  |
